--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "author": "test",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -26,12 +25,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "extract-text-webpack-plugin": "3.0.0",
-    "jest": "20.0.4",
-    "live-server": "1.2.1",
     "moment": "2.24.0",
     "node-sass": "4.13.0",
     "normalize.css": "7.0.0",
@@ -42,17 +36,20 @@
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
-    "react-test-renderer": "16.0.0",
     "redux": "4.0.5",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
     "validator": "12.1.0",
-    "webpack": "^3.1.0",
-    "webpack-dev-server": "2.5.1",
-    "yarn": "^1.22.5"
+    "webpack": "^3.1.0"
   },
   "devDependencies": {
-    "webpack": "^3.1.0"
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
+    "react-test-renderer": "16.0.0",
+    "webpack-dev-server": "2.5.1"
+    
   }
 }
