--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
-    "express":"4.15.4",
+    "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "moment": "2.24.0",
     "node-sass": "4.13.0",
     "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "16.13.1",
     "react-addons-shallow-compare": "15.6.0",
