--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -27,6 +27,7 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
+    "firebase": "^7.20.0",
     "moment": "2.24.0",
     "node-sass": "4.13.0",
     "normalize.css": "7.0.0",
@@ -34,11 +35,12 @@
     "raf": "3.3.2",
     "react": "16.13.1",
     "react-addons-shallow-compare": "15.6.0",
-    "react-dates": "12.7.0",
+    "react-dates": "12.7.1",
     "react-dom": "16.13.1",
     "react-redux": "7.2.1",
     "react-router-dom": "5.2.0",
     "redux": "4.0.5",
+    "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "uuid": "3.1.0",
@@ -46,11 +48,14 @@
     "webpack": "^3.1.0"
   },
   "devDependencies": {
+    "cross-env": "5.0.5",
+    "dotenv": "4.0.0",
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0",
+    "redux-mock-store": "1.5.4",
     "webpack-dev-server": "2.5.1"
   }
 }
