--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "firebase": "^7.20.0",
+    "history": "4.10.1",
     "moment": "2.24.0",
     "node-sass": "4.13.0",
     "normalize.css": "7.0.0",
